--- a/blog/static/blog/css/all.css
+++ b/blog/static/blog/css/all.css
@@ -1,4 +1,6 @@
 #header > div { margin-top: 30px;}
 #nav-menu { margin-top: 45px!important;}
 
+#content {margin-top:30px; }
+
 .entry { padding-top: 20px;}
