--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -16,12 +16,12 @@
 
 <div class="container">
 <div id="header" class="row">
-    <div class="span1 offset1"><img src="{{ STATIC_URL }}blog/img/face.png" /></div>
+    <div class="span1 offset2"><img src="{{ STATIC_URL }}blog/img/face.png" /></div>
     <div class="span5">
-        <h2><a href="">Andrei Kavaleu's blog</a></h2>
+        <h2><a href="/">Andrei Kavaleu's blog</a></h2>
         *)*)$#(&$##)$)(@*#)%&)@*$)(&%)(*)_#$
     </div>
-    <div id="nav-menu" class="span3 offset2">
+    <div id="nav-menu" class="span3 offset1">
         <ul class="nav nav-pills">
             <li class="active">
                 <a href="#">Home</a>
@@ -32,15 +32,11 @@
 </div>
 
 <div id="content" class="row">
-    <div class="span9">
-    <div>
+    <div class="span8 offset1">
         {% block body %}{% endblock %}
     </div>
-    </div>
     <div class="span3">
-        <div>
-            <h3>sidebar</h3>
-        </div>
+        <h3>sidebar</h3>
     </div>
 </div>
 
