--- a/blog/templates/blog/entry.html
+++ b/blog/templates/blog/entry.html
@@ -4,6 +4,10 @@
 {% endblock %}
 
 {% block body %}
+    <h3>
+        <a href="{{ item.get_absolute_url }}">{{ item.title|safe }}</a>
+        {% ifequal item.status 2 %} *DRAFT* {% endifequal %} {% ifequal item.status 3 %} *HIDDEN* {% endifequal %}
+    </h3>
     <div>
         {{ item.text|safe }}
     </div>
