--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -13,7 +13,12 @@
             <a href="{{ e.get_absolute_url }}">{{ e.title|safe }}</a>
             {% ifequal e.status 2 %} *DRAFT* {% endifequal %} {% ifequal e.status 3 %} *HIDDEN* {% endifequal %}
         </h3>
-        <div>{{ e.text|safe }}</div>
+        <div>
+            {{ e.short_text|safe }}
+            {% if e.text != e.shsort_text %}
+                <a href="{{ e.get_absolute_url }}}">Read more &rarr;</a>
+            {% endif %}
+        </div>
     </div>
     <hr/>
 {% endfor %}
