Fix to prev commit

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -16,7 +16,7 @@
         <div>
             {{ e.short_text|safe }}
             {% if e.text != e.shsort_text %}
-                <a href="{{ e.get_absolute_url }}}">Read more &rarr;</a>
+                <a href="{{ e.get_absolute_url }}">Read more &rarr;</a>
             {% endif %}
         </div>
     </div>
