Rss icon added to main page

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -18,7 +18,10 @@
 <div id="header" class="row">
     <div class="span1 offset2"><img src="{{ STATIC_URL }}blog/img/face.png" /></div>
     <div class="span5">
-        <h2><a href="/">Andrei Kavaleu's blog</a></h2>
+        <h2>
+            <a href="/">Andrei Kavaleu's blog</a>
+            <a href="feed/" ><img src="{{ STATIC_URL }}blog/img/rss-icon.png" /></a>
+        </h2>
         *)*)$#(&$##)$)(@*#)%&)@*$)(&%)(*)_#$
     </div>
     <div id="nav-menu" class="span3 offset1">
