Added tests to blog views

--- a/blog/templates/blog/entry.html
+++ b/blog/templates/blog/entry.html
@@ -5,11 +5,11 @@
 
 {% block body %}
     <h3>
-        <a href="{{ item.get_absolute_url }}">{{ item.title|safe }}</a>
+        <a href="{{ entry.get_absolute_url }}">{{ entry.title|safe }}</a>
         {% if item.featured  %}<img src="{{ STATIC_URL }}blog/img/blue-star-icon.png" title="featured" style="padding-bottom: 5px;" />{% endif %}
-        {% ifequal item.status 2 %} *DRAFT* {% endifequal %} {% ifequal item.status 3 %} *HIDDEN* {% endifequal %}
+        {% ifequal entry.status 2 %} *DRAFT* {% endifequal %} {% ifequal entry.status 3 %} *HIDDEN* {% endifequal %}
     </h3>
     <div>
-        {{ item.text|safe }}
+        {{ entry.text|safe }}
     </div>
 {% endblock %}
