Changed about me page

--- a/blog/templates/blog/about_me.html
+++ b/blog/templates/blog/about_me.html
@@ -8,20 +8,20 @@
 
 <div>
 <p>Привет, меня зовут Андрей Ковалев. Я разработчик программного обеспечения из Беларуси. 9 лет профессионально занимаюсь программированием.
-   Последние 7 лет преимущественно работаю на иностранных заказчиков.    Основной платформой разработки до недавнего времени .Net,
+   Последние 7 лет преимущественно работаю на иностранных заказчиков. Основной платформой разработки до недавнего времени был .Net,
    но за всю свою карьеру я писал и на Java, и на Python, и на Ruby, и на PHP, и даже на Adobe Flex с ColdFusion.</p>
 
 <p>Последние 2 года активно использую Python в качестве "рабочей лошадки". Причину смены основой платформы можно охарактеризовать как
     "устал от Энтерпрайза и тяжелых инструментов разработки". Хочу простоты и легкости. Питон для этого отлично подходит.
     Например, Django после ASP .Net выглядит как невероятно элегантный инструмент разработки, который позволяет просто делать сложные вещи.
-    Можно его, кончено, сравнить с ASP .Net MVC, но Django просто покоряет простотой использования сторонних приложений.</p>
+    Его можно сравнить с ASP .Net MVC, но Django просто покоряет простотой использования сторонних приложений.</p>
 
 <p>И хотя, после 7 лет "Энтерпрайза", у меня есть четкое понимание зачем нужны процессы в разработке ПО, я устал от бюрократии,
     долгих процедур утверждения изменений (и как противовес прямых писем "we need it ASAP" в обход правил).</p>
 
-<p>Но это не значит, что я за эдакий "cowboy-style development", отнюдь. Я не представляю свою работу без Системы Управления Версиями ( VCS, такие как SVN/Git/Mercurial),
-    без системы управления проектами/задачами (Redmine/Jira), Continius Integration сервера (Jira), частых комитов (не реже чем раз в 2 дня),
-    версировании базы данных и многих других доказавших свою ценность практик.</p>
+<p>Но это не значит, что я за эдакий "cowboy-style development", отнюдь. Я не представляю свою работу без Системы Управления Версиями (VCS, такие как SVN/Git/Mercurial),
+    без системы управления проектами/задачами (Redmine/Jira), Continuous Integration сервера (TeamCity), частых комитов (не реже чем раз в 2 дня)
+    и многих других доказавших свою ценность практик.</p>
 
 <h4>Что считаю своим достижением (по деталям проектов см. резюме):</h4>
 <ul>
