--- a/blog/templates/blog/entry.html
+++ b/blog/templates/blog/entry.html
@@ -1,12 +1,12 @@
 {% extends 'blog/base.html' %}
 {% block title %}
-    {{ item.title|safe }}
+    {{ entry.title|safe }}
 {% endblock %}
 
 {% block body %}
     <h3>
         <a href="{{ entry.get_absolute_url }}">{{ entry.title|safe }}</a>
-        {% if item.featured  %}<img src="{{ STATIC_URL }}blog/img/blue-star-icon.png" title="featured" style="padding-bottom: 5px;" />{% endif %}
+        {% if entry.featured  %}<img src="{{ STATIC_URL }}blog/img/blue-star-icon.png" title="featured" style="padding-bottom: 5px;" />{% endif %}
         {% ifequal entry.status 2 %} *DRAFT* {% endifequal %} {% ifequal entry.status 3 %} *HIDDEN* {% endifequal %}
     </h3>
     <div>
