--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -18,7 +18,7 @@
 
 <div class="container">
 <div id="header" class="row">
-    <div class="span1 offset2"><img src="{{ STATIC_URL }}blog/img/face.png" /></div>
+    <div class="span1 offset2"><img id="face" src="{{ STATIC_URL }}blog/img/face.png" /></div>
     <div class="span5">
         <h2>
             <a href="/">Andrei Kavaleu's blog</a>
